fix alignment of checkbox toggle

--- a/web/themes/quartiers_solidaires/assets/components/molecules/checkbox/checkbox.scss
+++ b/web/themes/quartiers_solidaires/assets/components/molecules/checkbox/checkbox.scss
@@ -53,10 +53,6 @@
   @include media-breakpoint-down(xs) {
     justify-content: space-between;
   }
-
-  > label:first-child {
-    margin: 0 $spacer 0 0;
-  }
 }
 
 .checkbox-toggle {
